theme/assets/styles/pages/_frontpage.scss
.homepagescreen {

  h1 a,h2{
    color:#fff;
  }
  h1 {
    font-size: 125px;
    max-height: 250px;
    color: #fff;
    text-transform: uppercase;
  }

  h2{
    font-size: 3em;
    margin-bottom: 20px;
  }
  #sentencerotate span, .subpage-title {
    font-size: 26px;
    font-weight:bold;
    max-height: 200px;
    color:#fff;
  }
  .nd_header__brand {
    filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.5));
    font-size: 98px;
    max-height: 250px;

  }
  .banner-homepage {
    padding: 2em 0;
    text-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
    color:#fff;
    background-size: cover, cover !important;
    background-position: center center;
    background-repeat: no-repeat;
    background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/hero_nice_2000.jpg');
  }

  #live {
    position: relative;
    height: 393px;
    padding: 0;

    .layer {
      background-color: rgba(0, 0, 0, 0.3);
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }

    iframe {
      width: 100%;
      height: 100%;
    }

    .streamer-container {
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%);
      text-align: center;
    }

    .streamer-info {
      font-size: 20px;
      color:#fff;
    }

    .ic-play {
      display: none;
      cursor: pointer;
      font-size: 70px;
    }

    .replay {
      display: none;
      font-weight: normal;

    }

    &.active {
      .ic-play {
        display: inline;
      }
      .replay {
        display: block;
      }
    }

  }

}


#socialhome {
  .page-header {
    border: 0 !important;
  }
}

#global .btn a{
  color: #fff;
}
#manifesto,
#participate,
#rassemblements {
  .page-header {
    border: 0 !important;
  }
  .wrapper {
    .container-fluid {
      background: #fff;
      padding: 30px 45px;
    }
  }
  iframe{
    border:none;
  }
  img.pull-left {
    padding-right: 20px;
    padding-bottom: 20px;
  }

  button a {
   color:#fff;
  }
}

#homepage-map {
  position: relative;
  .homepage-map__button {
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1;
  }
}

iframe {
  border:none;
}
.iframe-module{
  iframe{
    width:100%;
  }
}

.page-template-page-ville {
  h1:first-letter {
    box-shadow:
      0 3px 0 -1px $light-blue, /* to indent the green bottom line with the same color as the background */
      0 3px 0 0 $light-blue,  /* to create a bottom 3px high green line */
      inset 0 -1px 0 0 $light-blue; /* to create the top (1px) of the outline */
    border: 0 !important;
  }
  .page-header {
    border: 0 !important;
  }
}

.scroll {
  max-height: 600px;
  overflow: auto;
  border: 1px solid #eee;
  padding: 1em;
}

.participate-action {
  @include make-row;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 10px;

  .participate-action__image {
    @extend .col-md-6;

    @media (max-width: $screen-sm-max) {
      display: none;
    }
  }
  .participate-action__content {
    @extend .col-md-6;
  }
}

.action-title {
  color: $light-blue;
  font-size: 18px;
  font-weight: bold;
}

// news


.news-container {

  h2 {
    @include title-font;
  }

  h3 {
    font-family: Roboto;
  }
}

.news-list {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: space-between;

  margin-bottom: 30px;
}

$news-card-size: 350px;

.news-card {
  position: relative;

  border: 1px solid #ddd;
  border-radius: 5px;

  background-color: #fff;
  color: $gray-darker;

  min-height: $news-card-size/2;
  overflow: hidden;

  margin: 5px;
  @media (max-width: $screen-sm-max) {
    margin: 0 0 10px 0;
  }

  flex: 1 0 $news-card-size;
  @media (max-width: $screen-sm-max) {
    flex: 1 0 100%;
  }
  @include box-shadow(1px, 1px, 10px, #ddd);

  &:hover, &:active, &:focus {
    color: $gray;
  }

  .news-card__caption {
    padding: 15px;

    background-color: white;
    width: 100%;

    transition: .3s;
  }

  .news-card__content-animated {
    display: none;
  }

  &.news-card--animated {

    .news-card__caption {
      position: absolute;
      bottom: 0;
    }

    .news-card__content {
      display: none;
    }

    .news-card__content-animated {
      display: block;

      position: absolute;
      top: 3*$news-card-size;

      padding: 15px;
      background-color: rgba(0, 0, 0, 0.3);
      height: 100%;
      width: 100%;

      color: $gray-lighter;

      transition: .3s;
    }

    &:hover, &:active, &:focus {
      .news-card__caption {
        transform: translateY(100px);
      }
      .news-card__content-animated {
        transform: translateY(-3*$news-card-size);
      }
    }
  }

  .news-card__thumb {
    width: 100%;
    height: auto
  }
}


$news-headline-size: 360px !default;
.news-headlines {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;

  margin: 15px 0;

  .news-headlines__item {

    height: $news-headline-size;
    flex-basis: $news-headline-size;

    @include box-shadow(1px, 1px, 10px, #ddd);

    border: 1px solid #ddd;
    padding: 15px;

    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;

    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;

    font-family: Roboto;
    font-size: 30px;
    color: #fff;
    text-shadow: 0 3px 4px rgba(0,0,0,.5);
  }
  .news-headlines__item--first {
    flex-grow: 2;
  }
  .news-headlines__item--second {
    flex-grow: 1;
  }
}





.homepage-media {
  @extend .row;
  @include flexbox;
  @include justify-content(space-between);
  > * {
    @include flex-grow(1);
    text-align: center;
    border: 1px solid #ddd;
    img {
      vertical-align: middle;
      margin: 10px;
      width: 50px;
      height: 50px;
    }
    span {
      vertical-align: middle;
      font-family: AmaticSC;
      color: #111;
      font-size: 36px;
    }
  }
}

.video-section {
  padding: 50px 0;
  .live {
  transition : all 0.3s ease;
  vertical-align: top;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding-bottom: 30px;
  overflow: hidden;
    .vjs-paused.vjs-has-started .vjs-big-play-button {
    display: block;
    }
    #tvdebout {
    transition : all 0.3s ease;
    width: 100%;
    height: 100%;
    padding-top: 50%;
      .vjs-big-play-button {
      width: 100%;
      height: 48px;
      line-height: 48px;
      font-size: 3.5em;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      margin: auto;
      border: 0;
      border-radius: 0;
        .vjs-status {
        display: inline-block;
        vertical-align: middle;
        font-family: CommuneB1San31;
        font-size: 1.25em;
        margin-top: 15%;
        white-space: nowrap;
          &:before {
          display: inline-block;
          vertical-align: middle;
          content: "";
          margin-right: 0.125em;
          border-radius: 0.5em;
          height: 0.5em;
          width: 0.5em;
          background: red;
          animation: live 2s ease-in-out infinite;
            @keyframes "live" {
              0% {
              background: rgba(255, 0, 0, 1);
              }
              50% {
              background: rgba(255,100,100,1);
              }
            }
          }
        }
      }
    }
  }
  .hide-live {
  opacity: 0;
  padding: 0px;
  display: none;
    #tvdebout {
    padding-top: 0%;
    }
  }
  .video-section__title {
    display: table;
    width: 100%;
    padding-bottom: 20px;
    a, h1 {
      display: table-cell;
      vertical-align: middle;
    }
    h1 {
      width: 80%;
      font-size: 48px;
      font-family: CommuneB1San31;
      text-transform: uppercase;
      letter-spacing: 1px;
    }
  }
}

.news-container__bottom {
    a.block-link {
      display: block;
      color: initial;
    }

    .entry:nth-child(2) {
      margin-top: 20px;
    }

    .entry {
      margin-top: 10px;
      padding: 10px 0;
      border-top: 1px solid grey;
    }

    .primary-button {
      margin: 10px  auto;
      display: block;
      width: 240px;
    }

    .post-taxonomies{
      margin:1em 0;
      display:block;
      .post-taxonomy{
        color: $gray-light;
        &.post-taxonomy--post_tag{
            & > a {
              @include tag-link-reverse();
              padding: 0 0.5em;
              border-radius: 11px;
            }
        }
      }

    }
}

